gcc_out.txt
test.cpp:1:1: error: unknown type name 'ShortStr'
ShortStr Foo::Bar(A a,B& b, C* c)
^
test.cpp:1:10: error: use of undeclared identifier 'Foo'
ShortStr Foo::Bar(A a,B& b, C* c)
         ^
test.cpp:1:19: error: unknown type name 'A'
ShortStr Foo::Bar(A a,B& b, C* c)
                  ^
test.cpp:1:23: error: unknown type name 'B'
ShortStr Foo::Bar(A a,B& b, C* c)
                      ^
test.cpp:1:29: error: unknown type name 'C'
ShortStr Foo::Bar(A a,B& b, C* c)
                            ^
5 errors generated.
